--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         uses: appleboy/lambda-action@master
         with:
           aws_access_key_id: ${{ AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ AWS_SECRET_ACCESS_KEY }}
+          aws_secret_access_key: ${{ SECRET_ACCESS_KEY }}
           aws_region: eu-west-1
           function_name: my-function
           zip_file: bundle.zip
