--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
         with:
           aws_access_key_id: ${{ secrets.aws_access_key_id }}
           aws_secret_access_key: ${{ secrets.aws_secret_access_key }}
-          aws_region: eu-west-1
+          aws_region: us-east-1
           function_name: my-function
           zip_file: bundle.zip
